files/script/test/parse_error/def/test_def_error2.nl


main()
{

}

#script("test/parse_error/def/test_def_error2.nl")